Fix css overflow for all-tags and tag-search pages

--- a/public/stylesheets/alltags.css
+++ b/public/stylesheets/alltags.css
@@ -48,8 +48,11 @@
   display:inline-block;
   padding: 15px;
   border-radius: 5px;
+}
+
+.all_tags {
   overflow: auto;
-  max-height: 71vh;
+  max-height: 60vh;
 }
 
 /* -------- ADJUSTED FOOTER STYLES --------- */
